# PISCES-1

./: CMakeLists.txt  README.md  build.sh  build_intel.sh
doc/: Doxyfile
doc/.svn/: all-wcprops  entries
doc/.svn/text-base/: CMakeLists.txt.svn-base
ext/: README
ext/.svn/: all-wcprops  entries
ext/boost/.svn/: all-wcprops  entries
ext/boost/config/.svn/: all-wcprops  entries
ext/boost/config/abi/.svn/: all-wcprops  entries
ext/boost/config/compiler/.svn/: all-wcprops  entries
ext/boost/config/no_tr1/.svn/: all-wcprops  entries
ext/boost/config/platform/.svn/: all-wcprops  entries
ext/boost/config/stdlib/.svn/: all-wcprops  entries
ext/boost/fortran/: prototype.hpp
ext/boost/fortran/.svn/: all-wcprops  entries
ext/boost/preprocessor/.svn/: all-wcprops  entries
ext/boost/preprocessor/arithmetic/.svn/: all-wcprops  entries
ext/boost/preprocessor/config/.svn/: all-wcprops  entries
ext/boost/preprocessor/control/.svn/: all-wcprops  entries
ext/boost/preprocessor/debug/.svn/: all-wcprops  entries
ext/boost/preprocessor/detail/.svn/: all-wcprops  entries
ext/boost/preprocessor/detail/dmc/.svn/: all-wcprops  entries
ext/boost/preprocessor/facilities/.svn/: all-wcprops  entries
ext/boost/preprocessor/logical/.svn/: all-wcprops  entries
ext/boost/preprocessor/punctuation/.svn/: all-wcprops  entries
ext/boost/preprocessor/repetition/.svn/: all-wcprops  entries
ext/boost/preprocessor/repetition/detail/.svn/: all-wcprops  entries
ext/boost/preprocessor/repetition/detail/dmc/.svn/: all-wcprops  entries
ext/boost/preprocessor/repetition/detail/edg/.svn/: all-wcprops  entries
ext/boost/preprocessor/repetition/detail/msvc/.svn/: all-wcprops  entries
ext/boost/preprocessor/seq/.svn/: all-wcprops  entries
ext/boost/preprocessor/tuple/.svn/: all-wcprops  entries
save/build-old2/: CMakeCache.txt  pisces
save/build_20170925/: CMakeCache.txt  Makefile  pisces
save/build_20171127/: CMakeCache.txt  Makefile  cmake_install.cmake  pisces
save/build_new/: pisces
save/build_old/: CMakeCache.txt  pisces
save/build_old_20170703/: CMakeCache.txt  a  pisces
save/build_save/: CMakeCache.txt  cmake_install.cmake
singularity/: pisces.txt
site-macros/.svn/: all-wcprops  entries
site-macros/Modules/: FindARPACK.cmake  FindFFTW.cmake  FindFORTRANRTL.cmake  FindFORTRANRTLi.cmake  FindHDF5.cmake  FindISAT.cmake  FindSIGNALHANDLING.cmake  FindTVMET.cmake  Findhwloc.cmake  bigben-pgi.cmake  fermi.cmake  hostname.cmake  intel.cmake  kraken-gnupgf.cmake  utils.cmake
site-macros/Modules/.svn/: all-wcprops  entries
site-macros/Modules/.svn/text-base/: intel.cmake.svn-base  whichcompiler.cmake.svn-base
site-macros/caches/: intel.cmake  sam-intel.cmake  win-vs-intel.cmake
site-macros/caches/.svn/: all-wcprops  entries
site-macros/caches/.svn/text-base/: intel.cmake.svn-base  kraken.cmake.svn-base
site-macros/test/.svn/: all-wcprops  entries
site-macros/test/basicmpi/: main.cpp
site-macros/test/basicmpi/.svn/: all-wcprops  entries
site-macros/test/mixedcall/: CMakeLists.txt  fun.cxx  main.cxx  sub.f90
site-macros/test/mixedcall/.svn/: all-wcprops  entries
site-macros/test/utils/: CMakeLists.txt
site-macros/test/utils/.svn/: all-wcprops  entries
site-macros/try/: README
site-macros/try/.svn/: all-wcprops  entries
site-macros/try/blaslapack/: CMakeLists.txt  blas.f90
site-macros/try/blaslapack/.svn/: all-wcprops  entries
site-macros/try/mixedfortranc/: fcallc.f90  showmsg.f90
site-macros/try/mixedfortranc/.svn/: all-wcprops  entries
site-macros/try/mixedfortranc/.svn/text-base/: CMakeLists.txt.svn-base  ccallf.c.svn-base  showmsg.c.svn-base
src/: AtomCenter.h  C60.cpp  C60.h  ChargeDipPol.cpp  ChargeDipPol.h  ClusterAnion.cpp  ClusterAnion.h  DPP.cpp  DPP.h  DVR.cpp  DVR.h  Davidson.cpp  Davidson.h  DerivDDTensor.cpp  DistributedPolarizabilities.h  Elec.cpp  GTO.h  GeoAux.h  GetInput.cpp  Gradients.cpp  KE_diag.cpp  KE_diag.h  MO.h  Model_pot.cpp  Model_pot.h  MolPolAux.cpp  Molecule.cpp  Molecule.h  NaCl.cpp  Parameters.cpp  Parameters.h  Potential.cpp  Potential.h  ReadCubeFile.h  Small2Large.cpp  VectorFFT.hpp  VectorFFTW.cpp  Water.cpp  WriteCubeFile.cpp  WriteCubeFile.h  (+35 more)
src/.svn/: all-wcprops  entries
src/.svn/text-base/: C60.h.svn-base  ChargeDipPol.cpp.svn-base  DVR.cpp.svn-base  DVR.h.svn-base  Davidson.cpp.svn-base  DistributedPolarizabilities.h.svn-base  GeoAux.cpp.svn-base  GetInput.cpp.svn-base  GetInput.h.svn-base  Gradients.cpp.svn-base  NaCl.h.svn-base  Parameters.cpp.svn-base  Potential.cpp.svn-base  ReadCubeFile.cpp.svn-base  Small2Large.cpp.svn-base  Small2Large.h.svn-base  Water.cpp.svn-base  Water.h.svn-base  davdriver.cpp.svn-base  erf.h.svn-base  fulldiag.cpp.svn-base  mtx.cpp.svn-base  pisces.cpp.svn-base  tsin.cpp.svn-base  ttm_data.h.svn-base  vtx_FFT.cpp.svn-base
src/old/: ChargeDipPol.cpp  ChargeDipPol.cpp.20171107
src/save/: C60.cpp  larnoldi.cpp  larnoldi.cpp20170823  larnoldi.cpp_old  optimize.cpp
src/test/: DVR.cpp  build.sh  constants.h  fft_test.cpp  fft_test.x  libblas.so.3.4.2  libfftw3_mpi.so.3.5.5  resid.data  submit_test  timer.hpp  vtx_FFT.cpp
test/: c240c60.inp  mol2cub.tar  w4_pol3_opt.inp  w4_pol3_opt_small_input.inp  w6a_opt.inp  w8_d2h.inp
test/.svn/: all-wcprops  entries
test/.svn/text-base/: c240.inp.svn-base  c60.inp.svn-base  c60_dimer.inp.svn-base  runm2c.svn-base  submit_batch.svn-base  w12_pol3_opt.inp.svn-base  w45_pol3_sp.inp.svn-base  w4_sp.inp.svn-base
test/perf/: extract.sh  gettimes.awk
test/perf/.svn/: all-wcprops  entries
test/perf/.svn/text-base/: process.m.svn-base  run.sh.svn-base  test_pisces.sh.svn-base
tests/: CMakeLists.txt  doctest_main.cpp
tests/regression_tests/c60/: c60_example_test.cpp
